Fix wrong font file name.

--- a/assets/index.css
+++ b/assets/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "DSEG7Classic-Italic";
-    src: url("/assets/DSEG7Classic-Italic.046.woff2");
+    src: url("/assets/DSEG14Classic-Italic.046.woff2");
 }
 body {
     margin: 0;
